<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.creandotecnologiablog.museumqr.Principal"
    tools:showIn="@layout/activity_principal"
    android:weightSum="10">


        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:text="@string/titulo"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/titulo"
            android:layout_weight="2"
            android:layout_height="0dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/score"
        android:visibility="invisible"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puntuacion"
                android:textSize="@dimen/score"
                android:textColor="@android:color/background_dark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/puntuacion"
                android:textSize="@dimen/result"/>
        </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:gravity="center">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tiempo"
               android:textSize="@dimen/score"
               android:textColor="@android:color/background_dark"/>
           <Chronometer
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="00:00"
               android:textSize="@dimen/result"
               android:id="@+id/tiempo"
               android:layout_marginLeft="10dp"/>
       </LinearLayout>


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:text="@string/desc"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/titulo"
        android:layout_weight="1"
        android:layout_height="0dp" />
        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:textSize="@dimen/result"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:gravity="center_horizontal"
            android:text="@string/descripcion" />

</LinearLayout>
